# Flash

./: .gitignore  CMakeLists.txt
FlashUp/: README.md
resources/: resources.qrc
resources/qml/: DeviceList.qml  FirmwareInfo.qml  LogView.qml  UpdatePanel.qml  main.qml
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  cryptoutils.cpp  cryptoutils.h  deviceinterface.cpp  deviceinterface.h  firmwarepackage.cpp  firmwarepackage.h  flashupcore.cpp  flashupcore.h  updatejob.cpp  updatejob.h
src/gui/: CMakeLists.txt  flashupgui.cpp  flashupgui.h  logmodel.cpp  logmodel.h
src/plugins/: CMakeLists.txt
src/plugins/network/: CMakeLists.txt  networkdevice.cpp  networkdevice.h
src/plugins/serial/: CMakeLists.txt  serialdevice.cpp  serialdevice.h
